Victor's Graphical Chess Program's CHANGELOG
Here you can find a somewhat curated and chronological list of notable changes
The following entries deal mostly with changes to the actual software not with changes to the documentation, etc.
NOTE: These entries may not contain every single minor change but should contain all major changes

2021-01-23	version 00-0001
	Added a draw as a possible result of a match.
	NOTE: Currently a match can only result in a draw as a result of a stalemate.

	source file changes
		* src/move.c (movePiece): now checks for stalemate after a move
		* src/draw.c (drawGameOverText): now (if a match results in a draw) the text is "DRAW"
		* src/main.c (gameOver): now handles matches that result in a draw

	header file changes
		* include/vgcp.h: updated function prototypes,
			changed the default window size to 1000x1000

2021-01-24	version 00-0002
	Made the code nicer (switched the color variable(s) to "color_t" from "bool") and made other optimizations.

	source file changes
		* (almost) all: switched color variables to "color_t",
			optimized code

	header file changes
		* inclue/vgcp.h: created new macros,
			created the "color_t" type,
			updated function prototypes

2021-02-02	version 00-0003
	Now warns user on runtime when using the _DEBUG and warns user on runtime & compilation when the _NO_PERSPECTIVE_CHANGE is disabled,
	now moves use the structure "move"

	source file changes
		* src/main.c (main): Now warns of "unwanted" options being used on runtime (_DEBUG & _NO_PERSPECTIVE_CHANGE)
		* src/main.c (handleMousebuttonEvent): Updated function call to movePiece
		* src/move.c (movePiece): updated function arguments, optimized handling of castling,
			now uses the structure "move"

	header file changes
		* include/vgcp.h: updated function prototypes,
			now warns of _NO_PERSPECTIVE_CHANGE not being enabled,
			created the structure "move"